--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ font-style: normal;
           </nav>
           <div class="title">
                           <h1><b>Гибкая упаковка</b><br>
-и самоклеящиеся этикетки<br>
-в рулонах<br></h1>                                     
+для вашего члена<br>
+<b>лучшие презервативы в городе</b><br></h1>                                     
           </div>
           <div class="contact">
                           <a href="tel:+73422581077"><div class="icon"><svg width="800px" height="800px" viewBox="0 0 24 24" fill="none"><title>" class=</title>
