--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ font-style: normal;
 </ul></div>                                              
           </nav>
           <div class="title">
-                          <h1><b>Гибкая упаковка</b><br>
+                          <!-- <h1><b>Гибкая упаковка</b><br>
 для вашего члена<br>
-<b>лучшие презервативы в городе</b><br></h1>                                     
+<b>лучшие презервативы в городе</b><br></h1>                                      -->
           </div>
           <div class="contact">
                           <a href="tel:+73422581077"><div class="icon"><svg width="800px" height="800px" viewBox="0 0 24 24" fill="none"><title>" class=</title>
